Fix borders from being too wide.
git-svn-id: https://source.sakaiproject.org/svn/lessonbuilder/trunk@97691 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
+++ b/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
@@ -84,12 +84,10 @@
 .border {
 	border-style:solid;
 	border-width:2px;
-	width:100%;
 }
 .border2 {
 	border-style:solid;
 	border-width:2px;
-	width:100%;
 }
 
 .inset-text {
